@@ -17,6 +17,7 @@ Open Vehicle Monitor System v3 - Change log
                          - Wifi: Support APCLIENT mode (for Access-Point + Client)
                          - Webserver: command streaming, auto reload, shell pageup/down
                          - Ota: If wifi network is available, try to determine available firmware version on server
+                         - Webserver: added DNS config, replaced modem with network status
 
 2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                          - Update ovms_module to use new API for per-task heap info.
